# CompGr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  analyzewidget.cpp  analyzewidget.h  analyzewidget.ui  fourier.cpp  fourier.h  fourier.ui  fourierDialog.cpp  fourierDialog.h  gltemplateoscillogram.ui  glview.cpp  glview.h  graph2ddatatemplate.cpp  graph2ddatatemplate.h  graph2ddatatemplate.ui  graphinfo.cpp  graphinfo.h  graphinfo.ui  graphshow.cpp  graphshow.h  graphshow.ui  graphtemplate.cpp  graphtemplate.h  graphtemplate.ui  graphwidget.cpp  graphwidget.h  graphwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modeling.cpp  modeling.h  modellingwidget.cpp  modellingwidget.h  modellingwidget.ui
GraphGlData/: Graph2DData.cpp  Graph2DData.hpp  Graph3DData.cpp  Graph3DData.hpp  generaldata.cpp  generaldata.h
Handler/: AnalysisWindowHandler.cpp  AnalysisWindowHandler.hpp
Modeling/: modeling.cpp  modeling.h  randommodeling.cpp  randommodeling.h  superposition.cpp  superposition.h  superpositiondialog.cpp  superpositiondialog.h
Parser/: ParseData.hpp  ParseDataTxt.cpp  ParseDataTxt.hpp  ParseDataWav.cpp  ParseDataWav.hpp  Parser.hpp  Saver.cpp  Saver.h  parsedatacsv.cpp  parsedatacsv.h
Saver/: SaveHandler.cpp  SaveHandler.hpp  Saver.cpp  Saver.hpp  saverwindow.cpp  saverwindow.h
Statistics/: statistics.cpp  statistics.h  statisticswidget.cpp  statisticswidget.h  statisticswindow.cpp  statisticswindow.h
Transformation/: TransformToFourierSpectrum.cpp  TransformToFourierSpectrum.hpp  TransformToOscillogram.cpp  TransformToOscillogram.hpp  TransformToSpectrogram.cpp  TransformToSpectrogram.hpp  TransformToWaveletogram.cpp  TransformToWaveletogram.hpp
Utility/: config.h  generaldialog.cpp  generaldialog.h  utility.cpp  utility.h
fftw/: libfftw3-3.exp  libfftw3-3.lib
glViewTemplate/: gltemplateoscillogram.cpp  gltemplateoscillogram.h  gltemplatespectrogram.cpp  gltemplatespectrogram.h
glViewType/: glOscillogram.cpp  glOscillogram.hpp  glType.hpp  glspectrogram.cpp  glspectrogram.h
